--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,7 @@ python:
 services:
 - docker
 before_install:
-- openssl aes-256-cbc -K $encrypted_56635d5d55b3_key -iv $encrypted_56635d5d55b3_iv
-  -in do_ssh_key.enc -out ssh_keys/do_ssh_key -d
-- openssl aes-256-cbc -K $encrypted_56635d5d55b3_key -iv $encrypted_56635d5d55b3_iv
-  -in do_ssh_key.enc -out /tmp/git_deploy_key -d
+- openssl aes-256-cbc -K $encrypted_56635d5d55b3_key -iv $encrypted_56635d5d55b3_iv -in do_ssh_key.enc -out /tmp/git_deploy_key -d
 - chmod 600 /tmp/git_deploy_key
 - echo 'echo ${SSH_PASSPHRASE}' > /tmp/askpass && chmod +x /tmp/askpass
 - eval "$(ssh-agent -s)"
