--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 - docker
 before_install:
 - openssl aes-256-cbc -K $encrypted_56635d5d55b3_key -iv $encrypted_56635d5d55b3_iv
-  -in do_ssh_key.enc -out ssh_keys/do_ssh_key -d
+  -in do_ssh_key.enc -out ssh_keys/do_ssh_key -e
 - openssl aes-256-cbc -K $encrypted_56635d5d55b3_key -iv $encrypted_56635d5d55b3_iv
   -in do_ssh_key.enc -out /tmp/git_deploy_key -d
 - chmod 600 /tmp/git_deploy_key
